src/OpenCvSharpExtern/flann_IndexParams.h

CVAPI(ExceptionStatus) flann_IndexParams_getString(
    cv::flann::IndexParams *obj, const char *key, const char *defaultVal, std::string *returnValue)
{
    return cvTry([&] {
    returnValue->assign(obj->getString(key, defaultVal));
    });
}
CVAPI(ExceptionStatus) flann_IndexParams_getInt(cv::flann::IndexParams* obj, const char* key, int defaultVal, int *returnValue)
{
    return cvTry([&] {
    *returnValue = obj->getInt(key, defaultVal);
    });
}
CVAPI(ExceptionStatus) flann_IndexParams_getDouble(cv::flann::IndexParams* obj, const char* key, double defaultVal, double *returnValue)
{
    return cvTry([&] {
    *returnValue = obj->getDouble(key, defaultVal);
    });
}
CVAPI(ExceptionStatus) flann_IndexParams_setString(cv::flann::IndexParams* obj, const char* key, const char* value)
{
    return cvTry([&] {
    obj->setString(key, value);
    });
}
CVAPI(ExceptionStatus) flann_IndexParams_setInt(cv::flann::IndexParams* obj, const char* key, int value)
{
    return cvTry([&] {
    obj->setInt(key, value);
    });
}
CVAPI(ExceptionStatus) flann_IndexParams_setDouble(cv::flann::IndexParams* obj, const char* key, double value)
{
    return cvTry([&] {
    obj->setDouble(key, value);
    });
}
CVAPI(ExceptionStatus) flann_IndexParams_setFloat(cv::flann::IndexParams* obj, const char* key, float value)
{
    return cvTry([&] {
    obj->setFloat(key, value);
    });
}
CVAPI(ExceptionStatus) flann_IndexParams_setBool(cv::flann::IndexParams* obj, const char* key, int value)
{
    return cvTry([&] {
    obj->setBool(key, (value != 0));
    });
}
CVAPI(ExceptionStatus) flann_IndexParams_setAlgorithm(cv::flann::IndexParams* obj, int value)
{
    return cvTry([&] {
    obj->setAlgorithm(value);
    });
}